# AndroidOpenCVDemo

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/androidopencvdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  androidopencvdemo.cpp
app/src/main/cpp/mills/: Mill.h  MillCanny.h  MillContour.cpp  MillContour.h  MillEngine.cpp  MillEngine.h  MillNeg.cpp  MillNeg.h  MillOFLK.cpp  MillOFLK.h  MillORB.cpp  MillORB.h
app/src/main/java/com/example/androidopencvdemo/: GoblinCameraEngine.kt  GoblinImageEngine.kt  GoblinSurfaceView.kt  GoblinWorker.kt  ImageProcessorWrapper.kt  MainActivity.kt  YuvToRgbConverter.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/androidopencvdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
